progress on portfolio section. Introduced cards and grid layout. However, created a layout bug. To fix next

--- a/style.scss
+++ b/style.scss
@@ -73,8 +73,6 @@ code {
 
 section {
   position: relative;
-  align-self: center;
-  display: inline-block;
   z-index: 0;
   padding-top: 100px;
 }
@@ -148,8 +146,8 @@ a:hover {
   vertical-align: middle;
 
   a {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     padding-left: 6px;
     padding-right: 6px;
   }
@@ -173,8 +171,8 @@ a:hover {
 }
 
 .margin20percent {
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 20%;
+  margin-right: 20%;
 
   z-index: 0;
 }
@@ -186,8 +184,7 @@ a:hover {
 
 .grid-container {
   display: grid;
-  grid-gap: 0px;
-  position: relative;
+  grid-gap: 20px;
   padding: 0px;
 }
 
@@ -274,7 +271,7 @@ a:hover {
   height: 100vh;
   position: absolute;
   left: 40px;
-  margin-top: 5px;
+  margin-top: 10px;
   bottom: 0px;
   top: 0px;
   padding-left: 1px;
@@ -316,33 +313,45 @@ a:hover {
 
 .card {
   background: rgb(63, 36, 124);
-  border-radius: 2%;
+  border-radius: 5%;
   display: inline-block;
   height: 300px;
   position: relative;
-  width: 80%;
-  margin: 10px;
-  padding: 15px;
+  width: 300px;
+  margin: 0px;
+  padding: 10px;
 }
 
 .card-1 {
-  box-shadow: 0 1px 3px rgba(160, 17, 17, 0.12),
-    0 1px 2px rgba(226, 32, 32, 0.24);
+  box-shadow: 0 1px 3px rgba(55, 17, 160, 0.12),
+    0 1px 2px rgba(132, 32, 226, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .card-1:hover {
-  box-shadow: 0 14px 28px rgba(231, 62, 62, 0.25),
-    0 10px 10px rgba(211, 41, 41, 0.22);
+  box-shadow: 0 14px 28px rgba(62, 65, 231, 0.25),
+    0 10px 10px rgba(72, 41, 211, 0.22);
 }
 
 //  #IDs ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+#mlu {
+  grid-column: 1;
+}
+
+#inferno {
+  grid-column: 2;
+}
+
+#starman {
+  grid-column: 3;
+}
+
 #nav-icon3 {
   width: 34px;
-  height: 31px;
+  height: 34px;
   position: relative;
   margin: 0px auto;
   -webkit-transform: rotate(0deg);
@@ -419,8 +428,7 @@ a:hover {
 }
 
 #portfolio {
-  display: inline-block;
-  vertical-align: top;
+  margin-left: 5%;
 }
 
 #home {
@@ -428,6 +436,10 @@ a:hover {
   padding-right: 10%;
   padding-top: 10%;
   height: 100vh;
+}
+
+#about {
+  margin-left: 5%;
 }
 
 #socialLine {
